# servicekit

./: .codecov.yml  .dockerignore  .gitignore  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20251010_0927_4d869b5fb06e_initial_schema.py
api-reference/: index.html
design/: dataframe-enhancements.md
designs/: enhancement-roadmap.md
docs/: api-reference.md  index.md
docs/guides/: app-hosting.md  artifact-storage.md  authentication.md  database-migrations.md  dataframe.md  health-checks.md  job-scheduler.md  monitoring.md  registration.md  task-execution.md
examples/: app_hosting_api.py  artifact_storage_api.py  auth_basic.py  auth_custom_header.py  auth_docker_secrets.py  auth_envvar.py  core_api.py  job_scheduler_api.py  job_scheduler_sse_api.py  monitoring_api.py  task_execution_api.py
examples/app_hosting/: Dockerfile  README.md  compose.yml  main.py  pyproject.toml
examples/app_hosting/apps/sample-dashboard/: index.html  manifest.json  style.css
examples/apps/sample-dashboard/: index.html  manifest.json  script.js
examples/auth/: .env.example  Dockerfile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/auth_basic/: Dockerfile  Dockerfile.bak  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/auth_custom_header/: Dockerfile  compose.yml  main.py  pyproject.toml
examples/auth_docker_secrets/: Dockerfile  compose.yml  main.py  pyproject.toml
examples/auth_envvar/: Dockerfile  compose.yml  main.py  pyproject.toml
examples/core_api/: Dockerfile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/core_cli/: README.md  main.py  pyproject.toml
examples/dataframe_usage/: README.md  advanced_features_example.py  analytics_example.py  api_integration_example.py  column_operations_example.py  csv_example.py  inspection_example.py  json_example.py  pandas_example.py  polars_example.py  pyproject.toml  validation_example.py  xarray_example.py
examples/docker/: .env.example  README.md  compose.auth-envvar.yml  compose.auth-secrets.yml  compose.monitoring.yml
examples/docker/secrets/: api_keys.txt.example
examples/docs/: POSTMAN.md  README.md
examples/job_scheduler/: Dockerfile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/monitoring/: Dockerfile  README.md  compose.full-stack.yml  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/monitoring/docker/grafana/dashboards/: dashboard-testdata-kitchensink.json  servicekit-service-metrics.json
examples/monitoring/docker/grafana/provisioning/dashboards/: dashboard.yml
examples/monitoring/docker/grafana/provisioning/datasources/: prometheus.yml
examples/monitoring/docker/prometheus/: prometheus.yml
examples/multi_level_orchestrator/: README.md  child_orchestrator.py  docker-compose.yml  example_service.py  parent_orchestrator.py
examples/registration/: .env.example  Dockerfile  README.md  compose.yml  main.py  main_custom.py  orchestrator.py  postman_collection.json  pyproject.toml
examples/vega_visualization/: Dockerfile  README.md  Vega_Visualization_Service.postman_collection.json  compose.yml  main.py  pyproject.toml
guides/app-hosting/: index.html
guides/authentication/: index.html
guides/dataframe/: index.html
guides/health-checks/: index.html
guides/job-scheduler/: index.html
guides/monitoring/: index.html
guides/registration/: index.html
search/: search_index.json
src/servicekit/: __init__.py  database.py  exceptions.py  gunicorn.conf.py  logging.py  manager.py  models.py  repository.py  scheduler.py  schemas.py  types.py
src/servicekit/api/: __init__.py  app.py  auth.py  crud.py  dependencies.py  middleware.py  monitoring.py  pagination.py  registration.py  router.py  service_builder.py  sse.py  utilities.py
src/servicekit/api/apps/landing/: index.html  manifest.json
src/servicekit/api/routers/: __init__.py  health.py  job.py  metrics.py  system.py
src/servicekit/artifact/: __init__.py  manager.py  models.py  repository.py  router.py  schemas.py
src/servicekit/cli/: __init__.py  main.py  migrations.py
src/servicekit/data/: README.md  __init__.py  dataframe.py
src/servicekit/migrations/: __init__.py  helpers.py
src/servicekit/migrations/templates/: alembic.ini.jinja  env.py.jinja  script.py.mako
src/servicekit/task/: __init__.py  manager.py  models.py  registry.py  repository.py  router.py  schemas.py  validation.py
src/servicekit/utils/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_api_artifact_serialization.py  test_api_base.py  test_api_crud.py  test_api_registration.py  test_api_utilities.py  test_app_loader.py  test_artifact_router.py  test_artifact_serialization.py  test_auth.py  test_cli.py  test_core_coverage.py  test_database.py  test_dataframe.py  test_deferred_registration.py  test_dependencies.py  test_example_dataframe_usage.py  test_example_vega_visualization.py  test_exceptions.py  test_health_router.py  test_job_router.py  test_manager.py  test_manager_task.py  test_metrics.py  test_middleware.py  test_migrations_helpers.py  test_monitoring.py  test_pagination.py  test_repository.py  test_scheduler.py  test_service_builder_apps.py  test_stats.py  test_tags.py  test_task_injection.py  test_task_registry.py  test_task_repository.py  test_task_router.py  test_task_validation.py  test_types.py  (+2 more)
