[project]
name = "servicekit-demo-auth_custom_header"
version = "0.1.0"
description = "auth custom header demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "servicekit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
servicekit = { path = "../..", editable = true }
