[project]
name = "servicekit-demo-auth_docker_secrets"
version = "0.1.0"
description = "auth docker secrets demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "servicekit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
servicekit = { path = "../..", editable = true }
