[project]
name = "servicekit-demo-core-api"
version = "0.1.0"
description = "Core API demo showcasing BaseServiceBuilder with custom User entity"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "servicekit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
servicekit = { path = "../..", editable = true }
