[project]
name = "servicekit-demo-dataframe-usage"
version = "0.1.0"
description = "Simple examples showing DataFrame usage with pandas, polars, and xarray"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "servicekit",
    "pandas>=2.3.3",
    "polars>=1.20.0",
    "xarray>=2025.1.0",
    "numpy>=2.3.0",
]

[tool.uv.sources]
servicekit = { path = "../..", editable = true }
