[project]
name = "servicekit-demo-job_scheduler"
version = "0.1.0"
description = "jou scheduler demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "servicekit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
servicekit = { path = "../..", editable = true }
