[project]
name = "servicekit-demo-vega-visualization"
version = "0.1.0"
description = "Vega-Lite visualization service transforming DataFrame to Vega grammar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "servicekit",
    "pandas>=2.3.3",
    "altair>=5.5.0",
    "vl-convert-python>=1.8.0",
]

[tool.uv.sources]
servicekit = { path = "../..", editable = true }
